# text-classifier

./: README.md  pyproject.toml
text_classifier/: text-classifier.ipynb
