[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["majdalkilany <majdkilany92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"
sklearn = "^0.0"
jupyterlab = "^2.2.6"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
